--- a/catalog.html
+++ b/catalog.html
@@ -38,15 +38,16 @@
           <div class="header-primary">
             <div class="container">
                <div class="header-primary-wrapper">
-                    <p class="page-headlines">Интернет-магазин строительных материалов <br> и инструментов для ремонта</p>
-
-                    
+                    <p class="page-headlines">Интернет-магазин строительных материалов <br> и инструментов для ремонта</p>                    
                     <div class="header-contacts">                    
                         <p class="header-telephone">+7 (812) 555-05-55</p>
                         <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                     </div> 
-                    <div>   
-                      <a href="#" class="user-name">Равшан Джамшутович</a>            
+                    <div>
+                      <div class="page-user-control">
+                          <a href="#" class="user-name">Равшан Джамшутович</a>
+                          <a href="#" class="user-exit"><span class="visually-hidden">Выйти из личного кабинета</span></a>
+                      </div>             
                       <ul class="page-user-navigation">                         
                         <li class="user-orders">
                             <a href="#">Мои заказы</a>
@@ -94,8 +95,8 @@
                                     <div class="scale">
                                          <div class="bar"></div>
                                     </div>
-                                    <div class="toggle toggle-min"></div>
-                                    <div class="toggle toggle-max"></div>
+                                    <button class="toggle toggle-min"><span class="visually-hidden">Минимальная цена</span></button>
+                                    <button class="toggle toggle-max"><span class="visually-hidden">Максимальная цена</span></button>
                                </div>
                                <div class="price-controls">
                                      <label for="min-price" class="visually-hidden">от</label>
@@ -223,7 +224,7 @@
                     <h2 class="visually-hidden">Список перфораторов</h2>
                         <ul class="catalog-list">
                           <!--  1 товар           -->                                  
-                          <li class="catalog-item"> 
+                          <li class="catalog-item" tabindex="0"> 
                              <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -239,7 +240,7 @@
                                <p class="item-new-price">15500 Р.</p>  
                           </li>
                           <!--  2 товар            -->                
-                          <li class="catalog-item">
+                          <li class="catalog-item" tabindex="0">
                              <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -255,7 +256,7 @@
                                <p class="item-new-price">25500 Р.</p>   
                           </li>
                           <!--  3 товар            -->
-                          <li class="catalog-item">
+                          <li class="catalog-item" tabindex="0">
                              <div class="flag flag-new">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -271,7 +272,7 @@
                                <p class="item-new-price">12500 Р</p>  
                           </li>
                           <!--  4 товар            -->
-                          <li class="catalog-item">
+                          <li class="catalog-item" tabindex="0">
                              <div class="flag">новинка</div>
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -287,7 +288,7 @@
                                <p class="item-new-price">15500 Р.</p>
                           </li>
                           <!--  5 товар            -->
-                          <li class="catalog-item">
+                          <li class="catalog-item" tabindex="0">
                              <div class="flag flag-new">новинка</div>
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -303,7 +304,7 @@
                                <p class="item-new-price">25500 Р.</p>
                           </li>
                           <!--  6 товар            -->
-                          <li class="catalog-item"> 
+                          <li class="catalog-item" tabindex="0"> 
                              <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -319,7 +320,7 @@
                                <p class="item-new-price">12500 Р</p>
                           </li>
                           <!--  7 товар           -->
-                          <li class="catalog-item">
+                          <li class="catalog-item" tabindex="0">
                              <div class="flag flag-new">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -335,7 +336,7 @@
                                <p class="item-new-price">15500 Р.</p>
                           </li>
                           <!--  8 товар            -->
-                          <li class="catalog-item"> 
+                          <li class="catalog-item" tabindex="0"> 
                              <div class="flag">новинка</div>  
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
@@ -351,7 +352,7 @@
                                <p class="item-new-price">25500 Р.</p>
                           </li>
                           <!--  9 товар            -->
-                          <li class="catalog-item">
+                          <li class="catalog-item" tabindex="0">
                              <div class="flag">новинка</div>        
                               <div class="actions">
                                    <a href="#" class="buy-button">Купить</a>
