--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                                <label class="slider-controls-benefit--1" for="benefit-1">Первый</label>
                                <label class="slider-controls-benefit--2" for="benefit-2">Второй</label>
                            </div>
+                           <button class="slider-benefit-next"><span class="visually-hidden">Следующий слайд</span></button>
+                          <button class="slider-benefit-prev"><span class="visually-hidden">Предыдущий слайд</span></button>
                             <ul class="slider-list-benefits">
                                 <li class="slider-benefit">
                                   <h3>Дрели</h3>
@@ -102,7 +104,7 @@
                                   <b>Настоящие мужские игрушки</b>
                                   <a href="#" class="red-button slider-button">Открыть каталог</a>
                                 </li>
-                            </ul>       
+                            </ul>                                 
                       </li>  
                       <li>
                           <div class="benefits main-benefits-discount">
@@ -126,7 +128,7 @@
                   </div>
                   
                   <ul class="main-catalog catalog-list">
-                      <li class="catalog-item">
+                      <li class="catalog-item" tabindex="0">
                          <div class="flag">новинка</div>
                           <div class="actions">
                                <a href="#" class="buy-button">Купить</a>
@@ -141,7 +143,7 @@
                           <p class="item-old-price">32500 Р.</p> 
                           <p class="item-new-price">25500 Р.</p>
                       </li>
-                      <li class="catalog-item">
+                      <li class="catalog-item" tabindex="0">
                         <div class="flag">новинка</div>     
                          <div class="actions">
                                <a href="#" class="buy-button">Купить</a>
@@ -156,7 +158,7 @@
                           <p class="item-old-price">22500 Р.</p> 
                           <p class="item-new-price">15500 Р.</p>
                       </li>
-                      <li class="catalog-item">
+                      <li class="catalog-item" tabindex="0">
                         <div class="flag">новинка</div>    
                          <div class="actions">
                                <a href="#" class="buy-button">Купить</a>
@@ -171,7 +173,7 @@
                           <p class="item-old-price">30500 Р.</p> 
                           <p class="item-new-price">25500 Р.</p>
                       </li>
-                     <li class="catalog-item">   
+                     <li class="catalog-item" tabindex="0">   
                          <div class="flag flag-new">новинка</div>
                           <div class="actions">
                                <a href="#" class="buy-button">Купить</a>
