--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
                 <a class="header-logo logo" href="index.html">
                     <img src="img/svg/icon-logo.svg" width="111" height="18" alt="Логотип интернет-магазина «Техномарт»">
                 </a>                
-                <form action="#" method="post">
+                <form>
                     <label class="visually-hidden">Поиск:</label>
                     <input type="search" name="search" placeholder="Поиск:" class="search-form">
                     <div class="search-icon">
@@ -82,7 +82,7 @@
                     <div class="filters-top">
                         <h2>Фильтр:</h2>
                     </div>
-                    <form action="#" method="get" class="filter">
+                    <form class="filter">
                        <fieldset class="filter-price">
                            <legend>Цена:</legend>
                            <div class="range-filter">
