--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="header-logo logo" href="#">
                     <img src="img/svg/icon-logo.svg" width="110" height="18" alt="Логотип интернет-магазина «Техномарт»">
                 </a>
-                <form action="#" method="post">                   
+                <form>                   
                     <label for="search-form" class="visually-hidden">Поиск:</label>  
                     <input type="search" name="search" placeholder="Поиск:" class="search-form" id="search-form">
                     <div class="search-icon">
@@ -309,7 +309,7 @@
     
     <section class="modal modal-contact">
         <h2 class="visually-hidden">Форма обратной связи</h2>
-        <form method="post" action="#" class="contact-form">
+        <form class="contact-form">
             <div class="modal-contact-top">
                 <p class="modal-user-login">
                     <label for="user-login">Ваше имя:</label>
