--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
         <div class="header-primary">
             <div class="container">
                 <div class="header-primary-wrapper">
-                    <p class="page-headlines">Интернет-магазин строительных материалов <br> и инструментов для ремонта</p>                    
+                    <p class="page-headlines"><span>Интернет-магазин строительных материалов</span> и инструментов для ремонта</p>                   
                     <div class="header-contacts">                    
                         <p class="header-telephone">+7 (812) 555-05-55</p>
                         <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -258,7 +258,7 @@
                                 </div>   
                                 <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
                                 <p class="item-old-price"></p>
-                                <p class="item-new-price">12500 Р</p>  
+                                <p class="item-new-price">12500 Р.</p>  
                             </li>
                             <!--  4 товар            -->
                             <li class="catalog-item" tabindex="0">
@@ -300,7 +300,7 @@
                                 </div>
                                 <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
                                 <p class="item-old-price"></p>
-                                <p class="item-new-price">12500 Р</p>
+                                <p class="item-new-price">12500 Р.</p>
                             </li>
                             <!--  7 товар           -->
                             <li class="catalog-item" tabindex="0">
@@ -342,7 +342,7 @@
                                 </div>
                                 <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
                                 <p class="item-old-price"></p>
-                                <p class="item-new-price">12500 Р</p>
+                                <p class="item-new-price">12500 Р.</p>
                             </li>
                         </ul>
                     </section>
@@ -432,6 +432,6 @@
         <button class="modal-close" type="button">Закрыть</button>            
     </section>
     
-    <script src="js/script2.min.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
