--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header-primary">
             <div class="container">
                 <div class="header-primary-wrapper">
-                    <h1>Интернет-магазин строительных материалов <br> и инструментов для ремонта</h1>              
+                    <h1><span>Интернет-магазин строительных материалов</span> и инструментов для ремонта</h1>              
                     <div class="header-contacts">
                         <p class="header-telephone">+7 (812) 555-05-55</p>
                         <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
